--- a/block-BJaakg/code/index.html
+++ b/block-BJaakg/code/index.html
@@ -11,13 +11,13 @@
     <header>
       <h1>List of Got Books</h1>
     </header>
-    <main>
+    <main class="main1">
       <div>
         <ul id="main"></ul>
       </div>
       <div class="container">
         <h2>Characters</h2>
-        <span>close</span>
+        <div class="close">close</div>
         <ul id="modal"></ul>
       </div>
     </main>
